<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_display_message"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.memorychallenger.projects.memorychallenger.activities.DisplayMessageActivity">
    <EditText android:id="@+id/label_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/label_create_msg" />
    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/radio_question_type"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/label_name"
        android:checkedButton="@+id/radio_short_answer">
        <RadioButton android:id="@+id/radio_short_answer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_short_answer"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton android:id="@+id/radio_long_answer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_long_answer"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton android:id="@+id/radio_multiple_choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_multiple_choice"
            android:onClick="onRadioButtonClicked"/>
    </RadioGroup>
    <EditText
        android:id="@+id/question_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/question_name_msg"
        android:layout_below="@id/radio_question_type"/>
    <EditText
        android:id="@+id/short_answer_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/answer_msg"
        android:layout_below="@id/question_edit"/>
    <EditText
        android:id="@+id/long_answer_text"
        android:inputType="textMultiLine"
        android:hint="@string/answer_msg"
        android:lines="8"
        android:gravity="top|left"
        android:maxLines="10"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:scrollbars="vertical"
        android:layout_below="@id/question_edit"/>
    <Button android:id="@+id/create_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_create"
        android:onClick="createQuestion"
        android:layout_below="@id/long_answer_text"/>

</RelativeLayout>
