<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_pre_game"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.memorychallenger.projects.memorychallenger.activities.PreGameActivity">
    <EditText
        android:id="@+id/label_names_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/label_multiple_msg"/>
    <EditText
        android:id="@+id/num_questions_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/num_questions_msg"
        android:layout_below="@id/label_names_text"/>
    <Button android:id="@+id/create_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_play"
        android:onClick="startGame"
        android:layout_below="@id/num_questions_text"/>

</RelativeLayout>
